??? ??? ?? ??:??:?? ??? ???? (???) - Release 0.67
  Fix RT#43840, improper app-level config handling - hdp
  Fix RT#42859, 'wrong' Catalyst dependency - hdp

Wed Aug 20 10:42:00 PST 2008 (jshirley) - Release 0.65
  Fully revamped tests to work without any JSON support
  Final removal of JSON::Syck
  Special thanks to jgoulah for helping test this release

Wed Aug 13 08:55:00 PST 2008 (jshirley) - Release 0.64
  New dist to fix issue with Module::Install

Wed Jul 09 11:16:00 PST 2008 (jshirley) - Release 0.63
  Changing from JSON::Syck to JSON/JSON::XS
  Refactored tests to be more applicable to current state of affairs

Wed Jul 02 07:53:00 PST 2008 (jshirley) - Release 0.62
  Reshipping with current Module::Install included due to error reports
    about failed installs


Mon Jun 30 12:28:00 PST 2008 (jshirley) - Release 0.61
  Support official application/json and carp about text/x-json
  Accepted patch from Luke Saunders for processing all accepted content types

Thu Jan  3 17:23:58 PST 2008 (adam) - Release 0.60
  Updated my contact information.
  Prepped for release.

Thu Jan  3 19:42:16 EST 2008 
	Fixed RT#30498 - REST controller references Catalyst without
	  loading it first.
	Fixed RT#32042 - Import of Params::Validate :all plays badly
	  with subclasses that have their own validate()
	Fixed RT#30456 - Debug messages print even with debugging disabled

Thu Jan  3 08:54:09 PST 2008
	Fixed an issue where YAML::Syck versions 0.92 require $c->request->body to
	  be stringified

Fri Dec 21 15:23:46 EDT 2007 
	Updated the configuration specifiers to operate more in line with the way
	Catalyst expects.  Most notably component based configuration through
	"Controller::RestClass" now works.  "serialize" at the top level simply
	is suggested defaults that all REST classes inherit.

Wed Jul 04 11:17:20 EDT 2007
	Fixed 'default' serializer to set a valid Content-Type: header.  Fixes
	RT ticket 27949.  Note that behavior has changed -- the default