@@ -1,8 +1,8 @@
 use strict;
 use warnings;
-use Test::More tests => 24;
+use Test::More tests => 28;
 use FindBin;
-use lib ( "$FindBin::Bin/../lib" );
+use lib ( "$FindBin::Bin/../lib", "$FindBin::Bin/../t/lib" );
 
 use Catalyst::Request::REST;
 use HTTP::Headers;
@@ -165,6 +165,25 @@ use HTTP::Headers;
                      text/plain
                    ) ],
                'each type appears only once' );
+}
+
+{
+  my $test = 'Test::Catalyst::Action::REST';
+  use_ok $test;
+  is($test->request_class, 'Catalyst::Request::REST',
+    'Request::REST took over for Request');
+
+  $test->request_class('Some::Other::Class');
+  eval { $test->setup };
+  like $@, qr/$test has a custom request class Some::Other::Class/;
+
+  {
+    package My::Request;
+    use base 'Catalyst::Request::REST';
+  }
+  $test->request_class('My::Request');
+  eval { $test->setup };
+  is $@, '', 'no error from Request::REST subclass';
 }
 
 package MockContext;
